# Inverted_Pendulum_Control_Demo

./: CHANGELOG.md  CITATION.cff  LQR.py  PID.py  README.md  dependencies.txt  hatch_build.py  inverted_pendulum.py  kalman_filter.py  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: black.yml  isort.yml  release-pipeline.yml  release.yml  test-build.yml  test-pipeline.yml  test_build.yml  unit-tests.yml  unit_tests.yml
Inverted_Pendulum_Control_Demo/: __main__.py  inverted_pendulum.py  main_sim.py  plant.py  sim_parameters.py
Inverted_Pendulum_Control_Demo/controllers/: __init__.py  lqr.py  no_control.py  pid.py
Inverted_Pendulum_Control_Demo/core/: __init__.py
Inverted_Pendulum_Control_Demo/core/controllers/: lqr.py  no_control.py  pid.py
Inverted_Pendulum_Control_Demo/core/observers/: kalman_filter.py  pass_through.py
Inverted_Pendulum_Control_Demo/observers/: __init__.py  kalman_filter.py  pass_through.py
Inverted_Pendulum_Control_Demo/primitives/: __init__.py
Inverted_Pendulum_Control_Demo/primitives/controllers/: __init__.py  lqr.py  pid.py
Inverted_Pendulum_Control_Demo/primitives/observers/: __init__.py
Inverted_Pendulum_Control_Demo/test_setups/: __init__.py  basic_kalman_filter.py  basic_pid.py  lqr1.py  pass_through_observer.py
Inverted_Pendulum_Control_Demo/tests/unit_tests/: test_main_sim.py  test_plant.py
Inverted_Pendulum_Control_Demo/tests/unit_tests/test_primitives/: test_controllers.py  test_observers.py
Inverted_Pendulum_Control_Demo/tests/unit_tests/test_test_setups/: test_test_setups.py
scripts/: update_cff.sh
