[project]
name = "Inverted_Pendulum_Control_Demo"
description = "A test bench for exploring control theory on an inverted pendulum"
requires-python = ">=3.10"
dependencies = [
    "control",
    "numpy",
    "pandas",
    "scipy",
    "slycot",
    "plotly",
    "panel",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ensure your build target utilizes the hook
[tool.hatch.build.hooks.custom]

[tool.hatch.version]
path = "Inverted_Pendulum_Control_Demo/__init__.py"

[tool.semantic_release]
version_variable = [
    "Inverted_Pendulum_Control_Demo/__init__.py:__version__",
    "CITATION.cff:version",
]
upload_to_pypi = false
upload_to_release = true
allow_zero_version = true
assets = ["CITATION.cff"]
build_command = "hatch build"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
